--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 06:05:06 2018</p>
+         Last Run: Sat Nov 24 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>83</td>
+                        <td>10</td>
+                        <td>81</td>
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>45</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>76</td>
+                        <td>4</td>
+                        <td>74</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>6</td>
-                        <td>73</td>
+                        <td>5</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>23</td>
+                        <td>SSE</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>76</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -176,9 +176,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "10",
+                 "4",
                  "5",
-                 "5",
-                 "6",
                  "6"
                ]
              },
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "76",
-                 "73",
-                 "76"
+                 "81",
+                 "74",
+                 "71",
+                 "72"
                ]
              },
              {
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "28",
-                 "23",
-                 "23"
+                 "48",
+                 "29",
+                 "20",
+                 "21"
                ]
              }
            ]
@@ -238,12 +238,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 06:05:06 2018</p>
+         Last Run: Sat Nov 24 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,11 +269,11 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,11 +281,11 @@
                         <td>1</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SSW</td>
-                        <td>16</td>
+                        <td>SW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -405,8 +406,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "59",
+                 "61",
+                 "58",
                  "57"
                ]
              },
@@ -416,8 +417,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
-                 "16",
+                 "17",
+                 "14",
                  "14"
                ]
              }
@@ -458,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 06:05:06 2018</p>
+         Last Run: Sat Nov 24 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,10 +481,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-5</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -494,24 +495,24 @@
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +539,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
                  "-4",
-                 "-4"
+                 "-4",
+                 "-3"
                ]
              },
              {
@@ -550,9 +551,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-1",
-                 "-1"
+                 "-1",
+                 "0"
                ]
              }
            ]
@@ -610,7 +611,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "4"
                ]
              },
@@ -620,9 +621,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "78",
-                 "79"
+                 "84",
+                 "81",
+                 "82"
                ]
              },
              {
@@ -632,8 +633,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "62",
-                 "64",
-                 "66"
+                 "63",
+                 "65"
                ]
              }
            ]
@@ -673,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 06:05:06 2018</p>
+         Last Run: Sat Nov 24 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +699,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,23 +711,23 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>90</td>
+                        <td>5</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -826,7 +827,7 @@
                "data":[
                  "5",
                  "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -835,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "87",
-                 "90"
+                 "85",
+                 "85",
+                 "88"
                ]
              },
              {
@@ -846,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "48",
-                 "46"
+                 "50",
+                 "47",
+                 "45"
                ]
              }
            ]
