--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 12:05:02 2018</p>
+         Last Run: Sat Nov 24 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Clear</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>0</td>
-                        <td>76</td>
-                        <td>1</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>22</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>0</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
                         <td>15</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>0</td>
-                        <td>74</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>20</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM",
              "03:00 PM"
            ],
@@ -89,9 +76,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-6",
-                 "-6"
+                 "-4",
+                 "-5"
                ]
              },
              {
@@ -101,9 +87,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-2",
-                 "-2"
+                 "-1",
+                 "-1"
                ]
              }
            ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM",
              "03:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "72",
-                 "74"
+                 "70",
+                 "71"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
                  "15",
-                 "20"
+                 "18"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 12:05:02 2018</p>
+         Last Run: Sat Nov 24 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,24 +230,24 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-3</td>
-                        <td>1</td>
-                        <td>62</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>23</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-2</td>
-                        <td>1</td>
-                        <td>60</td>
+                        <td>2</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -274,11 +255,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +357,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "2"
                ]
              },
@@ -387,9 +368,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "60",
-                 "59"
+                 "63",
+                 "63",
+                 "60"
                ]
              },
              {
@@ -398,9 +379,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "15",
-                 "10"
+                 "21",
+                 "12",
+                 "9"
                ]
              }
            ]
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 12:05:02 2018</p>
+         Last Run: Sat Nov 24 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,39 +442,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>5</td>
-                        <td>82</td>
+                        <td>Overcast</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>-3</td>
+                        <td>4</td>
+                        <td>80</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>SSW</td>
-                        <td>64</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>Overcast</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>4</td>
+                        <td>78</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>84</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Overcast</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>5</td>
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>63</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>4</td>
-                        <td>83</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>SSW</td>
-                        <td>64</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,9 +501,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-4",
-                 "-4"
+                 "-3",
+                 "-3",
+                 "-3"
                ]
              },
              {
@@ -532,9 +513,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "-1",
-                 "-1"
+                 "0",
+                 "0",
+                 "0"
                ]
              }
            ]
@@ -591,9 +572,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
                  "4",
-                 "4"
+                 "4",
+                 "5"
                ]
              },
              {
@@ -602,9 +583,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "80",
-                 "83"
+                 "78",
+                 "80"
                ]
              },
              {
@@ -613,9 +594,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "63",
-                 "64"
+                 "84",
+                 "84",
+                 "86"
                ]
              }
            ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 12:05:02 2018</p>
+         Last Run: Sat Nov 24 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,38 +658,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
                         <td>-4</td>
+                        <td>-7</td>
                         <td>8</td>
-                        <td>84</td>
+                        <td>92</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
                         <td>-5</td>
+                        <td>-8</td>
                         <td>8</td>
-                        <td>84</td>
+                        <td>93</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>95</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,9 +716,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-5",
-                 "-6"
+                 "-7",
+                 "-8",
+                 "-9"
                ]
              },
              {
@@ -747,9 +728,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
-                 "-2",
-                 "-3"
+                 "-4",
+                 "-5",
+                 "-5"
                ]
              }
            ]
@@ -817,9 +798,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "84",
-                 "88"
+                 "92",
+                 "93",
+                 "95"
                ]
              },
              {
@@ -828,9 +809,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "45",
-                 "40"
+                 "48",
+                 "46",
+                 "44"
                ]
              }
            ]
