--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 15:05:02 2018</p>
+         Last Run: Sat Nov 24 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-1</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>21</td>
+                        <td>WSW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
-                        <td>63</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>SSW</td>
-                        <td>12</td>
+                        <td>62</td>
+                        <td>1</td>
+                        <td>6</td>
+                        <td>SW</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>9</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-2",
                  "-2"
                ]
              },
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "1",
                  "2"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
                  "63",
-                 "61"
+                 "62",
+                 "62"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "12",
-                 "9"
+                 "18",
+                 "16",
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 15:05:02 2018</p>
+         Last Run: Sat Nov 24 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,24 +248,24 @@
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>80</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>79</td>
+                        <td>5</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>84</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "5",
+                 "5",
                  "5"
                ]
              },
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
                  "79",
+                 "77",
                  "80"
                ]
              },
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
-                 "84",
+                 "85",
+                 "87",
                  "86"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 24 15:05:02 2018</p>
+         Last Run: Sat Nov 24 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,7 +464,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>8</td>
-                        <td>96</td>
+                        <td>93</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -474,11 +474,11 @@
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-9</td>
+                        <td>-8</td>
                         <td>8</td>
-                        <td>95</td>
+                        <td>94</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
                         <td>46</td>
                      </tr>
@@ -488,11 +488,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>6</td>
-                        <td>99</td>
+                        <td>97</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-9",
+                 "-8",
                  "-10"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "96",
-                 "95",
-                 "99"
+                 "93",
+                 "94",
+                 "97"
                ]
              },
              {
@@ -614,7 +614,7 @@
                "data":[
                  "48",
                  "46",
-                 "44"
+                 "43"
                ]
              }
            ]
